<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Login"
    android:background="#FB864E"
    android:textAlignment="center">

  <TextView
      android:id="@+id/etLoginTitle"
      android:layout_width="212dp"
      android:layout_height="64dp"
      android:layout_marginTop="112dp"
      android:fontFamily="monospace"
      android:text="@string/login"
      android:textAlignment="center"
      android:textAppearance="@style/TextAppearance.AppCompat.Display1"
      android:textColor="#FEEFEF"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <EditText
      android:id="@+id/etLoginEmail"
      android:layout_width="282dp"
      android:layout_height="90dp"
      android:layout_marginTop="28dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/email"
      android:inputType="textEmailAddress"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginTitle" />

  <Button
      android:id="@+id/btnLogin"
      android:layout_width="119dp"
      android:layout_height="59dp"
      android:layout_marginTop="32dp"
      android:fontFamily="monospace"
      android:text="@string/login"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginPassword" />

  <EditText
      android:id="@+id/etLoginPassword"
      android:layout_width="282dp"
      android:layout_height="90dp"
      android:layout_marginTop="28dp"
      android:ems="10"
      android:fontFamily="monospace"
      android:hint="@string/pass"
      android:inputType="textPassword"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.496"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/etLoginEmail" />

  <TextView
      android:id="@+id/etLoginTxt"
      android:layout_width="210dp"
      android:layout_height="28dp"
      android:layout_marginTop="24dp"
      android:fontFamily="monospace"
      android:text="@string/registration_message"
      android:textAlignment="center"
      android:textColor="#FEFEFE"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.152"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin"
      app:layout_constraintVertical_bias="0.0" />

  <TextView
      android:id="@+id/txtRegisterBtn"
      android:layout_width="82dp"
      android:layout_height="28dp"
      android:layout_marginStart="25dp"
      android:layout_marginTop="25dp"
      android:fontFamily="monospace"
      android:text="@string/register"
      android:textAlignment="viewStart"
      android:textColor="#6750A3"
      android:textStyle="bold"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toEndOf="@+id/etLoginTxt"
      app:layout_constraintTop_toBottomOf="@+id/btnLogin"
      app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>